# marketplace-api

./: .gitignore  Makefile  docker-compose.yaml  products.json  pyproject.toml
localstack_init/: s3-init.sh
marketplace/: main.py  routes.py
marketplace/core/: model.py  settings.py
marketplace/deals/: models.py  routes.py  use_cases.py
marketplace/products/: models.py  routes.py  use_cases.py
marketplace/providers/: cache.py  exc.py  helpers.py  storage.py
tests/: products_generator.py
